2005-01-16  KUBO Takehiro  <kubo@jiubao.org>

	* ext/oci8/oci8.h, ext/oci8/stmt.c: don't raise an error when OCI_SUCCESS_WITH_INFO.
	* ext/ooi8/oraconf.rb, README: support Oracle Instant Installer.

2004-10-30  KUBO Takehiro  <kubo@jiubao.org>

	* pre-distclean.rb: delete a temporary file made by ext/oci8/oraconf.rb.
	* ext/oci8/oraconf.rb: 1. change object files to an archive file
	  to work around on Oracle 8.1.7. 2. raise error when OCI.H can't
	  be found on Windows.

2004-06-21  KUBO Takehiro  <kubo@jiubao.org>

	* Makefile, ext/oci8/extconf.rb: change version to 0.1.8-pre1
	* lib/DBD/OCI8/OCI8.rb: add DBI::DatabaseHandle#tables. add DBI::StatementHandle#func(:bind_value, ...).

2004-03-07  KUBO Takehiro  <kubo@jiubao.org>

	* ext/oci8/extconf.rb: fix to use setup.rb.
	* ext/oci8/oraconf.rb: add support Borland C++ Builder.
	* lib/oci8.rb.in: support OCI8::CLOB.
	* test/config.rb: CLOB test file depends on NLS_LANG.
	* test/test_oci8.rb: fix a test method.
	* test/test_break.rb: break time depends on OS?...
	* test/test_dbi_clob.rb: add a new file to test CLOB via DBI.

2003-09-20  KUBO Takehiro  <kubo@jiubao.org>

	* src/handle.c: fix bug of OCI8::BLOB at running GC.
	* src/stmt.c: accept Bignum as (({type})) of OCI8::Cursor#define.
	* src/lib/oci8.rb.in: accept OCI8::BLOB as (({type})) of OCI8::Cursor#define.
	* src/lib/DBD/OCI8/OCI8.rb: add (({define})) function to DBD::OCI8.
	* src/oranumber.c, src/oci8.h: use rb_cstr_to_dbl instead of strtod for ruby 1.8.
	* support/runit/cui/testrunner.rb, support/runit/testcase.rb: fix for ruby 1.8.
	* test/test_dbi.rb: add a test method.
	* test/test_oci8.rb: fix a test method.

2003-08-03  KUBO Takehiro  <kubo@jiubao.org>

	* Makefile: update version to 0.1.5
	* MANIFEST: add test/test_oci8.rb
	* src/lib/oci8.rb.in: implement OCI8::Cursor#define, OraDate#to_time and OraDate#to_date.
	* test/test_oci8.rb: add new tests of OCI8::Cursor#define.